# supervised-learning

./: pyproject.toml
src/: decision-tree.ipynb  naive-bayes.ipynb  random-forest.ipynb
